# PaletteFlow

./: .gitignore  GUIDE.md  LICENSE  README.md  apply.sh  build_extractor.sh  pyproject.toml  requirements.txt
extractor/: Cargo.toml
extractor/src/: main.rs
paletteflow/: cava.py  cli.py  color_utils.py  extract.py  fastfetch.py  ghostty.py  gnome_shell.py  service.py  starship.py  watcher.py  watcher.sh
